--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Astralia citizen ship test</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="practice">practice</string>
+    <string name="test">test</string>
+    <string name="book">book</string>
+    <string name="dashboard">dashboard</string>
 </resources>
